Risk scores implemented

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
      <div class="tab-content" id="nav-tabContent">
       <!-- Food Security (0-3; 1: medium risk, 2: high risk, 3: imminent risk) -->
       <div aria-labelledby="list-FoodSecurity-list" class="tab-pane fade show active" id="FoodSecurity" role="tabpanel">
+        <div class="mb-3">
+            <label class="form-label">
+             Patient Name
+            </label>
+            <div class="form-check form-check-reverse form-check-inline">
+             <input id="inlineRadioDefault1" name="name" type="text"/>
+            </div>
+           </div>
        <div class="mb-3">
         <label class="form-label">
          1. Do you have food for tonight? (Y/N)
