Fixed questionnaire route

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="public/About.html" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="public/Contact.html" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="questionarre/index.html" class="nav-link">Survey</a></li>
+                <li class="nav-item"><a href="questionnaire/index.html" class="nav-link">Survey</a></li>
               </ul>
             </header>
           </div>
