--- a/questionnaire/index.html
+++ b/questionnaire/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
     rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
     crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2284/2284001.png">
+    <link rel="icon" type="image/png" href="/Assets/Logo-Favicon.webp">
   </head>
   
   <body>
