Integrated frontend and backend

--- a/index.html
+++ b/index.html
@@ -1,113 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME | Vertex</title>
-    <link rel="stylesheet" href="css/Header.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@200&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-<body>
-    <!-- PRESENTATION -->
-    <div class="border-bottom border-dark hero">
-        <video autoplay loop muted plays-inline class="back-video">
-            <source src="Assets/Vertex.mp4" type="video/mp4">
-        </video>
-        <!-- Navigation -->
-        <div class="container-fluid Header">
-          <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom border-dark">
-              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <img src="Assets/Logo.webp" alt="Logo" id="Logo">
-              </a>
-        
-              <ul class="nav nav-underline align-content-center">
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="public/About.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="public/Contact.html" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="questionnaire/index.html" class="nav-link">Survey</a></li>
-              </ul>
-            </header>
-          </div>
-          <!-- Logo Presents -->
-          <div class="px-4 py-5 my-5 text-center">
-            <img src="Assets/Brand-Label.svg" alt="Logo" height="50" id="hero-pic">
-            <div class="col-lg-6 mx-auto">
-              <p class="lead mb-4">
-                Our solutions address healthcare disparities by assisting healthcare systems in bridging the gaps between the care they provide and the various needs of the vulnerable communities they serve.<br><br>
-                Our flagship product, the Vertex 360 Platform, provides psychosocial tools and community resources for interdisciplinary healthcare teams to provide the highest quality of holistic care.
-                
-                </p>
-              </div>
-            </div>
-          </div>
+  <head>
+    <!-- <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
 
-    <!-- Features -->
-    <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Vertex 360 Platform</h2>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-
-          <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                <img src="Assets/Psychosocial-Assessment-Tool.svg" alt="Psychosocial-Assessment-Tool" height="100" class="Feature">
-            </div>
-            <h3 class="fs-2 text-body-emphasis">Psychosocial Assessment Tool</h3>
-            <p>Validated screening tools to assess social risks and the impacts of trauma</p>
-          </div>
-
-          <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                <img src="Assets/Trauma-Informed-Care-Plan.svg" alt="Trauma-Informed-Care-Plan" height="100" class="Feature">
-            </div>
-            <h3 class="fs-2 text-body-emphasis">Trauma-Informed Care Plan</h3>
-            <p>Trauma-Informed Questionnaire to promote sensitive, patient-centered care.</p>
-          </div>
-
-          <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-              <img src="Assets/Psychosocial-Resource-Platform.svg" alt="Psychosocial-Resource-Platform" height="100" class="Feature">
-            </div>
-            <h3 class="fs-2 text-body-emphasis">Psychosocial Resource Platform</h3>
-            <p>Network of evidence-based, accessible psychosocial resources within the communit</p>
-          </div>
-        </div>
-      </div>
-    <!-- Featurettes-->
-      <hr class="featurette-divider">
-      <div class="row featurette" style="margin-right: 0px">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">Psychosocial Assessment Tool</h2>
-          <p class="lead">The Psychosocial Assessment Tool includes a social screening questionnaire based on the 5 social determinants of health domains that community services can help with: housing, food, transportation, health, utilities, interpersonal violence. It also assesses for impacts of trauma in a trauma-informed manner that resists retraumatization of the patient.</p>
-        </div>
-        <div class="col-md-5">
-          <img src="Assets/Featurette-1.webp" alt="Featurette-1" height="400">
-        </div>
-      </div>
-      <hr class="featurette-divider">
-      <div class="row featurette" style="margin-right: 0px">
-        <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading fw-normal lh-1">
-            Trauma-Informed Care Plan</h2>
-          <p class="lead">Patient completes a trauma-informed questionnaire that physicians can use to implement patient-centered, trauma-informed care during clinical encounters. With a mix of open-ended questions on trauma history and targeted questions on pertinent factors such as triggers and coping skills, the trauma-informed care plan promotes more sensitive, personalized, holistic care.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-          <img src="Assets/Featurette-2.webp" alt="Featurette-2" height="400">
-        </div>
-      </div>
-      <hr class="featurette-divider">
-      <div class="row featurette" style="margin-right: 0px">
-        <div class="col-md-7">
-          <h2 class="featurette-heading fw-normal lh-1">
-            Psychosocial Resource Platform</h2>
-          <p class="lead">The Psychosocial Resource Platform connects community-based organizations and social services with various care settings to provide automated, well-curated, evidence-based interventions to the psychosocial risk factors assessed during the visit. This network of resources allows for higher quality care by connecting organizations and services that play a role in caring for the health of our communities.</p>
-        </div>
-        <div class="col-md-5">
-          <img src="Assets/Featurette-3.webp" alt="featured-3" height="400">
-        </div>
-      </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
